--- a/roles/harbor/tasks/install.yml
+++ b/roles/harbor/tasks/install.yml
@@ -3,22 +3,22 @@
 - name: 'Downloading Harbor'
   get_url:
       url: https://github.com/goharbor/harbor/releases/download/v{{ harbor_version }}-rc1/harbor-offline-installer-v{{ harbor_version }}-rc1.tgz
-      dest: /tmp
+      dest: /opt
       mode: '0777'
   register: harborinstall
   changed_when: no
 
 - name: Unzip Habor File
   unarchive:
-      src: /tmp/harbor-offline-installer-v{{ harbor_version }}-rc1.tgz
-      dest: /tmp
+      src: /opt/harbor-offline-installer-v{{ harbor_version }}-rc1.tgz
+      dest: /opt
       remote_src: yes
 
 - name: Copy Habor Configuration
   template:
       src: harbor.yml
-      dest: /tmp/harbor
+      dest: /opt/harbor
       backup: yes
       
 - name: Install Harbor
-  shell: /tmp/harbor/install.sh {{ harbor_install_args }}
+  shell: /opt/harbor/install.sh {{ harbor_install_args }}
