--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -58,6 +58,7 @@
       - docker
 
 - name: Install docker-compose
+  become: true
   get_url: 
       url : https://github.com/docker/compose/releases/download/{{ version }}-rc1/docker-compose-Linux-x86_64
       dest: /usr/local/bin/docker-compose
